SERVER-6809 SERVER-6811 fix chunk bounds for prefix shard keys