src/mongo/db/dbhelpers.cpp
@@ -293,8 +293,12 @@ namespace mongo {
                     
                     IndexDetails& i = nsd->idx( ii );
 
+                    // Extend min to get (min, MinKey, MinKey, ....)
                     BSONObj newMin = Helpers::modifiedRangeBound( min , keyPattern , -1 );
-                    BSONObj newMax = Helpers::modifiedRangeBound( max , keyPattern , 1 );
+                    // If upper bound is included, extend max to get (max, MaxKey, MaxKey, ...)
+                    // If not included, extend max to get (max, MinKey, MinKey, ....)
+                    int minOrMax = maxInclusive ? 1 : -1;
+                    BSONObj newMax = Helpers::modifiedRangeBound( max , keyPattern , minOrMax );
                     
                     c.reset( BtreeCursor::make( nsd , ii , i , newMin , newMax , maxInclusive , 1 ) );
                 }
